@@ -2,6 +2,11 @@ pytest-responsemock changelog
 =============================
 
 
+Unreleased
+----------
++ Add support for binary responses.
+
+
 v0.2.0 [2020-03-31]
 -------------------
 + Added support for response header fileds.
